// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`noEmitOnErrorsPlugin transforms correctly using "noEmitOnErrorsPlugin-0" data 1`] = `
"module.export = {
    optimizations: {
        noEmitOnErrors: true
    }
}
"
`;

exports[`noEmitOnErrorsPlugin transforms correctly using "noEmitOnErrorsPlugin-1" data 1`] = `
"module.export = {
	optimizations: {
        splitChunks: false,
        noEmitOnErrors: true
    },
    plugins: [new Foo()]
}
"
`;

exports[`noEmitOnErrorsPlugin transforms correctly using "noEmitOnErrorsPlugin-2" data 1`] = `
"module.export = {
	optimizations: {
        noEmitOnErrors: true
    },
    plugins: [new Foo()]
}
"
`;
